# phase-congruency-features

./: .gitignore  LICENSE.md  README.md
src/: CMakeLists.txt
src/examples/: CMakeLists.txt  example1.cpp  example2.cpp  example3.cpp
src/filter_bank/: CMakeLists.txt  log_gabor_filter_bank.cpp  log_gabor_filter_bank.h  main.cpp
src/phase_congruency/: CMakeLists.txt  main.cpp  phase_congruency.cpp  phase_congruency.h
src/utils/: CMakeLists.txt  assert.cpp  assert.h  assert2.cpp  assert2.h  image_io.cpp  image_io.h  math_functions.cpp  math_functions.h  types.h
